Player Custom added

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 *.meta
+Addons/CharacterCreation/Prefabs/Drag to Canvas/CharacterCreation-Old.prefab
+Addons/CharacterCreation/Prefabs/Drag to Canvas/CharacterSelection-Old.prefab
+Addons/CharacterCreation/Imports/3D Only.unitypackage
